# teatime

./: README.md  Tea.cmb  dev.tekofx.TeaTime.json  dev.tekofx.TeaTime.json~  meson.build  preferences.ui  settings  settings.gradle.kts
.fleet/: receipt.json
composeApp/: build.gradle.kts
composeApp/src/androidMain/kotlin/dev/tekofx/teatime/: AndroidTimerManager.kt  AppTheme.kt  MainActivity.kt  Platform.android.kt
composeApp/src/androidMain/res/drawable/: ic_launcher_foreground.xml
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/composeResources/drawable/: emoji_food_beverage.xml  inventory_filled.xml  inventory_outlined.xml  timer_filled.xml
composeApp/src/commonMain/kotlin/dev/tekofx/teatime/: App.kt  AppTheme.kt  AppViewModel.kt  CustomMaterialTheme.kt  Greeting.kt  Platform.kt  Tea.kt  TeaButton.kt  TeatimeMaterialTheme.kt  TimerLabel.kt
composeApp/src/commonMain/kotlin/dev/tekofx/teatime/components/: MainScaffold.kt  TeaButton.kt  TimerLabel.kt
composeApp/src/desktopMain/kotlin/dev/tekofx/teatime/: AppTheme.kt  DesktopTimerManager.kt  Platform.jvm.kt  main.kt
data/: dev.tekofx.TeaTime.desktop.in  dev.tekofx.TeaTime.gschema.xml  dev.tekofx.TeaTime.metainfo.xml.in  meson.build
data/icons/: meson.build
gradle/: libs.versions.toml
locales/es/LC_MESSAGES/: teatime.mo
po/: POTFILES  es.po  meson.build  teatime.pot
src/: main.py  meson.build  preferences.py  preferences.ui  style.css  tea.py  tea_button.py  tea_button.ui  teatime.gresource.xml  teatime.in  window.py  window.ui
(+11 files in other folders)
